syntax = "proto3";

option go_package = "sigmaos/keysrv/proto";

service ROnlyKeySrv {
  rpc GetKey(GetKeyRequest) returns (GetKeyResponse);
}

service RWKeySrv {
  rpc SetKey(SetKeyRequest) returns (SetKeyResponse);
}


message SetKeyRequest {
  string signerStr = 1;
  bytes  b64 = 2;
}

message SetKeyResponse {
}

message GetKeyRequest {
  string signerStr = 1;
}

message GetKeyResponse {
  bool  oK = 1;
  bytes b64 = 2;
}
